kubernetes/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle-service
  namespace: dozzle
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: dozzle
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.2.131 # this is your DNS IP, NOT THE GUI!
  type: LoadBalancer
