kubernetes/dozzle/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dozzle
  namespace: dozzle
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`dozzle.tehmatt.com`)
    kind: Rule
    services:
    - name: dozzle
      port: 3000
    middlewares:
    - name: default-headers
  tls:
    secretName: tehmatt-tls
